# bloodyai

./: README.md  classification.py  detection.py  main.py  pyproject.toml  recognition.py  system_accuracy_evaluator.py  whiteBloodCell_classification.py
all_jsons/: 20160720_232423.json  20160720_232510.json  20160720_232547.json  20160720_232618.json  20160720_232649.json  20160720_232755.json  20160720_232843.json  20160720_233024.json  20160720_233057.json  20160720_233123.json  20160720_233140.json  20160720_233237.json  20160720_233256.json  20160720_233318.json  20160720_233334.json  20160720_233425.json  20160720_233437.json  20160721_002623.json  20160721_005045.json  20160721_005121.json  20160721_005150.json  20160721_005321.json  20160721_005407.json  20160721_005428.json  20160721_005726.json  20160721_005739.json  20160721_005747.json  20160721_005803.json  20160721_005828.json  20160721_005904.json  20160721_005918.json  20160721_005935.json  20160721_005948.json  20160721_010013.json  20160721_010054.json  20160721_010137.json  20160721_010200.json  20160721_010235.json  20160721_010258.json  20160721_010516.json  (+17728 more)
classification/: 20160801_102650.json  converter.py  recognition.py  resnet.ipynb  yolov8.ipynb
classification/firsttest/: firsttest.yaml  yolov8.ipynb
classification/firsttest/runs/detect/firsttest/: args.yaml
classification/firsttest/runs/detect/firsttest2/: args.yaml
classification/firsttest/runs/detect/firsttest3/: args.yaml
detection/: detection.py
utils/: accuracy.py  file_crop.py
(+4 files in other folders)
